--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
   <!-- Graafit-välilehti -->
   <div id="chartsTab" class="tab-content" style="display:none;">
     <div style="text-align:center; margin-bottom:1rem;">
-      <label><input type="checkbox" id="vatToggle" /> Näytä hinnat arvonlisäverolla (14%)</label>
+      <p style="text-align:center; font-size:0.9rem; color:#666;">Graafit esittävät hinnat painettuun tai digitaaliseen julkaisuun.</p>
+      <label><input type="checkbox" id="vatToggle" /> Näytä hinnat arvonlisäverolla (14 %)</label>
     </div>
     <h2>Runous: hinta vs painosmäärä</h2>
     <canvas id="runousChart"></canvas>
