--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sanasto-laskuri ja hinnastograafit</title>
+  <title>Sanaston julkaisulupien hinnat</title>
   <!-- Chart.js kirjasto -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
