--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     body.dark-mode input, body.dark-mode select { background: #333; color: #fff; border: 1px solid #444; }
     body.dark-mode button[type="submit"], body.dark-mode #themeToggle { background: #fff; color: #111; }
     body.dark-mode button[type="submit"]:hover, body.dark-mode #themeToggle:hover { background: #ddd; }
+    body.dark-mode .result {background: #222; border: 1px solid #444;}
     body.dark-mode .tab-nav button { background: #333; color: #fff; }
     body.dark-mode .tab-nav button.active { background: #005fa3; }
     @media (max-width: 600px) { body { margin: 10px; } form, .tab-content { padding: 10px; max-width: 95%; } }
