--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sanasto-laskuri ja hinnastograafit</title>
+  <title>Sanaston julkaisulupien hinnat</title>
   <!-- Chart.js kirjasto -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
@@ -34,7 +34,7 @@
 </head>
 <body>
   <button id="themeToggle">Vaihda tummaan teemaan</button>
-  <h1>Sanasto-laskuri ja hinnastograafit</h1>
+  <h1>Sanaston julkaisulupien hinnat</h1>
 
   <div class="tab-nav">
     <button class="active" data-tab="calculator">Laskuri</button>
