--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background-color: #f5f5f5; color: #333; transition: background-color 0.3s, color 0.3s; }
     h1, h2 { text-align: center; }
-    form, .tab-content { background: #fff; padding: 15px; border: 1px solid #ccc; border-radius: 5px; max-width: 600px; margin: 1rem auto; box-shadow: 0 2px 5px rgba(0,0,0,0.1); transition: background 0.3s; }
+    form, .tab-content { background: #fff; padding: 15px; border: 1px solid #ccc; border-radius: 5px; max-width: 440px; margin: 1rem auto; box-shadow: 0 2px 5px rgba(0,0,0,0.1); transition: background 0.3s; }
     label { display: block; margin-top: 10px; font-weight: bold; }
     input[type="number"], select { padding: 5px; width: 100%; box-sizing: border-box; margin-top: 5px; }
     button[type="submit"], #themeToggle { display: block; margin: 0.5rem auto; padding: 0.5rem 1rem; font-size: 0.9rem; border: none; border-radius: 20px; cursor: pointer; transition: background-color 0.3s; }
@@ -43,11 +43,13 @@
 
   <div id="calculatorTab" class="tab-content">
     <form id="calculator" onsubmit="calculatePrice(); return false;">
+      <!--
       <label for="publicationType">Käyttökohde:</label>
       <select id="publicationType" onchange="updateLabels()">
         <option value="printed">Painettu tai digitaalinen julkaisu</option>
         <option value="electronic">Sähköinen oppimisympäristö</option>
       </select>
+      -->
       <label for="textType">Tekstilaji:</label>
       <select id="textType" onchange="updateLabels()">
         <option value="runous">Runous</option>
@@ -66,7 +68,9 @@
   </div>
 
   <div id="chartsTab" class="tab-content" style="display:none;">
+    <!--
     <p style="text-align:center; font-size:0.9rem; color:#666;">Graafit esittävät hinnat painettuun tai digitaaliseen julkaisuun.</p>
+    -->
     <label for="chartQuantity">Painosmäärä:</label>
     <input type="number" id="chartQuantity" value="1000" min="1" step="100" />
     <label><input type="checkbox" id="vatToggle" /> Näytä hinnat arvonlisäverolla (14 %)</label>
@@ -85,21 +89,21 @@
       document.getElementById('chartsTab').style.display = tab === 'charts' ? 'block' : 'none';
     }
     function updateLabels() {
-      const pub = document.getElementById('publicationType').value;
+      // const pub = document.getElementById('publicationType').value;
       const txt = document.getElementById('textType').value;
-      document.getElementById('quantityLabel').innerText = pub === 'electronic' ? 'Käyttäjämäärä:' : 'Painosmäärä:';
+      // document.getElementById('quantityLabel').innerText = pub === 'electronic' ? 'Käyttäjämäärä:' : 'Painosmäärä:';
       const merkk = document.getElementById('merkkimaara');
       merkk.required = txt === 'proosa';
       document.getElementById('merkkimaaraGroup').style.display = txt === 'proosa' ? 'block' : 'none';
     }
     function calculatePrice() {
-      const pub = document.getElementById('publicationType').value;
+      // const pub = document.getElementById('publicationType').value;
       const txt = document.getElementById('textType').value;
       const mer = parseFloat(document.getElementById('merkkimaara').value) || 0;
       let qty = parseFloat(document.getElementById('quantity').value) || 0;
       if (txt === 'proosa') qty = Math.max(qty, 1000);
       let p;
-      if (pub === 'printed') {
+     // if (pub === 'printed') {
         if (txt === 'runous') {
           p = qty <= 1000 ? 46.64 : 46.64 + (qty - 1000) * 0.02;
         } else {
@@ -107,7 +111,7 @@
           const base = 31.8 + Math.max(0, qty - 1000) * 0.01;
           p = base * factor;
         }
-      } else {
+      /* } else {
         if (txt === 'runous') {
           p = 42.4 + qty * 0.03 + 15.9;
         } else {
@@ -115,7 +119,7 @@
           const base = 21.2 + qty * 0.02 + 10.6;
           p = 21.2 + qty * 0.02 * factor + 10.6;
         }
-      }
+       }*/
       if (document.getElementById('translatorPermit').checked) p /= 2;
       p = Math.round(p * 100) / 100;
       const pvat = Math.round(p * 1.14 * 100) / 100;
@@ -180,7 +184,7 @@
       });
     }
 
-    window.addEventListener('DOMContentLoaded', () => { updateLabels(); switchTab('calculator'); document.querySelectorAll('.tab-nav button').forEach(b => b.addEventListener('click', () => switchTab(b.dataset.tab))); document.getElementById('themeToggle').addEventListener('click', () => { document.body.classList.toggle('dark-mode'); document.getElementById('themeToggle').innerText = document.body.classList.contains('dark-mode') ? 'Vaihda vaaleaan teemaan' : 'Vaihda tummaan teemaan'; }); document.getElementById('vatToggle').addEventListener('change', updateCharts); document.getElementById('chartQuantity').addEventListener('input', updateCharts); document.getElementById('publicationType').addEventListener('change', updateLabels); document.getElementById('textType').addEventListener('change', updateLabels); document.getElementById('calculator').addEventListener('submit', calculatePrice); updateCharts(); });
+    window.addEventListener('DOMContentLoaded', () => { updateLabels(); switchTab('calculator'); document.querySelectorAll('.tab-nav button').forEach(b => b.addEventListener('click', () => switchTab(b.dataset.tab))); document.getElementById('themeToggle').addEventListener('click', () => { document.body.classList.toggle('dark-mode'); document.getElementById('themeToggle').innerText = document.body.classList.contains('dark-mode') ? 'Vaihda vaaleaan teemaan' : 'Vaihda tummaan teemaan'; }); document.getElementById('vatToggle').addEventListener('change', updateCharts); document.getElementById('chartQuantity').addEventListener('input', updateCharts); /* document.getElementById('publicationType').addEventListener('change', updateLabels);*/ document.getElementById('textType').addEventListener('change', updateLabels); document.getElementById('calculator').addEventListener('submit', calculatePrice); updateCharts(); });
   </script>
 </body>
 </html>
